update intro removal and throwables removal
taken from L4D2-Competitive-Rework

--- a/cfg/stripper/zonemod/global_filters.cfg
+++ b/cfg/stripper/zonemod/global_filters.cfg
@@ -2938,21 +2938,26 @@ replace:
 		"classname" "trigger_hurt"
 	}
 }
-; Stop Intro Freeze, credit to Sir
-filter:
-{
-	"targetname" "relay_intro_setup"
-}
+; =====================
+; Intro Removal!
+; =====================
 modify:
 {
-match:
+	match:
 	{
 		"targetname" "relay_intro_start"
 	}
-insert:
+	delete:
 	{
-		"OnTrigger" "camera_introDisable0-1"
-		"OnTrigger" "relay_intro_finishedTrigger1-1"
+		"OnTrigger" "@directorForceSurvivorPositions0-1"
+		"OnTrigger" "directorForceSurvivorPositions0-1"
+		"OnTrigger" "fade_introFade0-1"
+		"OnTrigger" "fx_introEnable0-1"
+		"OnTrigger" "fx_introKill*-1"
+	}
+	insert:
+	{
+		"OnTrigger" "relay_intro_survivor_camerasTrigger0-1"
 	}
 }
 ; =====================================================
@@ -2999,3 +3004,15 @@ replace:
 }
 
 ; =====================================================
+; THROWABLES BEGONE 
+; =====================================================
+filter:
+{
+	"classname" "weapon_molotov_spawn"
+}
+{
+	"classname" "weapon_pipe_bomb_spawn"
+}
+{
+	"classname" "weapon_vomitjar_spawn"
+}
