cotd03_mall block spit in vent leading up to ladder
backport from ZoneMod 1.9.4

--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -132,6 +132,7 @@ spit_block_square l4d2_darkblood02_engine 2515 5610 2664 5770
 spit_block_square x1m2_path 6303 10742 6522 10893
 spit_block_square c1m1_hotel 2087 5736 2249 5890
 spit_block_square c1m4_atrium -3960 -3324 -4120 -3483
+spit_block_square cotd03_mall 8713 3405 8890 3115
 
 // [l4d2_godframes_control.smx]
 confogl_addcvar gfc_hittable_override 1
