--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -133,6 +133,8 @@ spit_block_square x1m2_path 6303 10742 6522 10893
 spit_block_square c1m1_hotel 2087 5736 2249 5890
 spit_block_square c1m4_atrium -3960 -3324 -4120 -3483
 spit_block_square cotd03_mall 8713 3405 8890 3115
+spit_block_square l4d2_daybreak03_bridge -7365.97 -1889.97 -7294.03 -1754
+spit_block_square l4d2_daybreak04_cruise 8064.77 -6594.97 8141 -6525
 
 // [l4d2_godframes_control.smx]
 confogl_addcvar gfc_hittable_override 1
