add fixes from L4D2-Competitive-Rework
* l4d_rock_lagcomp.smx
* l4d_votepoll_fix.smx
* l4d2_script_cmd_swap.smx

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -192,6 +192,10 @@ sm plugins load optional/zonemod/suicideblitzfinalefix.smx
 sm plugins load optional/zonemod/static_tank_control.smx
 sm plugins load optional/zonemod/saferoom_gnome.smx
 sm plugins load optional/zonemod/whitelist_database.smx
+sm plugins load optional/zonemod/8ball.smx
+sm plugins load optional/zonemod/l4d_rock_lagcomp.smx
+sm plugins load optional/zonemod/l4d_votepoll_fix.smx
+sm plugins load optional/zonemod/l4d2_script_cmd_swap.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
