load chat_spam_throttle.smx

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -196,6 +196,7 @@ sm plugins load optional/zonemod/8ball.smx
 sm plugins load optional/zonemod/l4d_rock_lagcomp.smx
 sm plugins load optional/zonemod/l4d_votepoll_fix.smx
 sm plugins load optional/zonemod/l4d2_script_cmd_swap.smx
+sm plugins load optional/zonemod/chat_spam_throttle.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
