add static_tank_map c1_mario1_4 and remove redundant finale tank cvars

--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -332,8 +332,8 @@ static_tank_map c9m2_alleys
 static_tank_map c10m5_houseboat
 static_tank_map c11m5_runway
 static_tank_map c12m5_cornfield
-static_tank_map C12m5_cornfield
 static_tank_map c13m2_southpinestream
+static_tank_map c1_mario1_4
 static_tank_map l4d2_darkblood04_extraction
 static_tank_map x1m5_salvation
 static_tank_map uf4_airfield
@@ -353,7 +353,6 @@ tank_map_only_second_event c8m5_rooftop
 tank_map_only_second_event c10m5_houseboat
 tank_map_only_second_event c11m5_runway
 tank_map_only_second_event c12m5_cornfield
-tank_map_only_second_event C12m5_cornfield
 
 // Finales with a single first event Tank
 tank_map_only_first_event c1m4_atrium
