enable debug cvars

--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -69,7 +69,8 @@ confogl_addcvar sm_tank_nowitch_debug "1"
 confogl_addcvar sm_tank_map_debug "1"
 confogl_addcvar sm_teleport_tank_debug "1"
 confogl_addcvar sm_restartmap_debug "1"
-confogl_addcvar l4d_no_tank_rush_debug "0"
+confogl_addcvar l4d_no_tank_rush_debug "1"
+confogl_addcvar l4d_tank_damage_announce_debug "1"
 confogl_addcvar tankcontrol_debug "1"
 confogl_addcvar static_tank_control_debug "1"
 confogl_addcvar discord_scoreboard_webhook_cfg "discord_scoreboard"
