load l4d2_changelevel.smx

--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -24,6 +24,7 @@ sm plugins load playercommands.smx
 //-----------------
 sm plugins load optional/zonemod/l4d2lib.smx
 sm plugins load optional/zonemod/l4d2util.smx
+sm plugins load optional/zonemod/l4d2_changelevel.smx
 
 //----------------------------------
 // General Competitive Plugins
