remove tank ban range from c8m1_apartment and add infected ladder to the one-way drop

--- a/cfg/stripper/zonemod/maps/c8m1_apartment.cfg
+++ b/cfg/stripper/zonemod/maps/c8m1_apartment.cfg
@@ -1,4 +1,28 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- infected ladder to climb up the one-way drop
+add:
+{
+	"model" "*79"
+	"normal.z" "0.000000"
+	"normal.y" "-1.000000"
+	"normal.x" "0.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "912 -661 27.5"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_interiors/bookcase_48_96.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "6"
+	"origin" "2085 1398 24"
+}
+
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
