add infected ladder to get on top of roof across door choke on c10m4_mainstreet

--- a/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
+++ b/cfg/stripper/zonemod/maps/c10m4_mainstreet.cfg
@@ -24,6 +24,16 @@ add:
 	"classname" "func_simpleladder"
 	"origin" "5143 -52.5 59.08"
 }
+;---Ladder to get on top of roof across door choke
+{
+	"model" "*288"
+	"normal.z" "0.000000"
+	"normal.y" "-1.000000"
+	"normal.x" "0.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "699 -1381 264.22"
+}
 
 ; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
