--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -25,6 +25,7 @@ sm plugins load playercommands.smx
 sm plugins load optional/zonemod/l4d2lib.smx
 sm plugins load optional/zonemod/l4d2util.smx
 sm plugins load optional/zonemod/l4d2_changelevel.smx
+sm plugins load optional/zonemod/l4d2_event_logger.smx
 
 //----------------------------------
 // General Competitive Plugins
@@ -198,6 +199,7 @@ sm plugins load optional/zonemod/l4d_rock_lagcomp.smx
 sm plugins load optional/zonemod/l4d_votepoll_fix.smx
 sm plugins load optional/zonemod/l4d2_script_cmd_swap.smx
 sm plugins load optional/zonemod/chat_spam_throttle.smx
+sm plugins load optional/zonemod/parish_finale_ladder_fix.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
