--- a/cfg/stripper/zonemod/maps/c12m1_hilltop.cfg
+++ b/cfg/stripper/zonemod/maps/c12m1_hilltop.cfg
@@ -1,4 +1,18 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- infected ladder to climb above into the rocks without surfing up a hill
+add:
+{
+	"model" "*15"
+	"normal.z" "0.000000"
+	"normal.y" "0.000000"
+	"normal.x" "-1.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "2145 -5070 505"
+}
+; =====================================================
 ; ===============  PILL CABINET TWEAK  ================
 ; =====================================================
 
