add infected ladders and remove corner boxes in l4d2_diescraper4_top_361

--- a/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
+++ b/cfg/stripper/zonemod/maps/l4d2_diescraper4_top_361.cfg
@@ -19,7 +19,7 @@ filter:
 ;--- Add small invisible blocker that blocks the ball hittable from falling into the staircase fully
 add:
 {
-	"origin" "615 610 -128"
+	"origin" "615 608 -128"
 	"mins" "-330 0 -139"
 	"boxmins" "-330 0 -139"
 	"maxs" "0 15 0"
@@ -28,41 +28,62 @@ add:
 	"BlockType" "4"
 	"classname" "env_physics_blocker"
 }
+;--- extra ladders in main event room to stay symmetrical with opposite side
+{
+	"model" "*264"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2.00 925.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
+{
+	"model" "*264"
+	"normal.z" "0.00"
+	"normal.y" "0.00"
+	"normal.x" "1.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-2.00 187.00 0.00"
+	"angles" "0.00 180.00 0.00"
+}
 
 ; Block death window as you approach finale area
-add:
-{
-	"classname" "prop_dynamic"
-	"origin" "850 817 -128"
-	"angles" "0 274 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props/cs_militia/boxes_frontroom.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "866 725 -128"
-	"angles" "0 340 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props/cs_office/shelves_metal.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "854 671 -128"
-	"angles" "0 291 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "819 875 -128"
-	"angles" "0 272 0"
-	"solid" "6"
-	"rendercolor" "255 255 255"
-	"model" "models/props/cs_office/shelves_metal.mdl"
-}
+;add:
+;{
+;   "classname" "prop_dynamic"
+;   "origin" "850 817 -128"
+;   "angles" "0 274 0"
+;   "solid" "6"
+;   "rendercolor" "255 255 255"
+;   "model" "models/props/cs_militia/boxes_frontroom.mdl"
+;}
+;{
+;   "classname" "prop_dynamic"
+;   "origin" "866 725 -128"
+;   "angles" "0 340 0"
+;   "solid" "6"
+;   "rendercolor" "255 255 255"
+;   "model" "models/props/cs_office/shelves_metal.mdl"
+;}
+;{
+;   "classname" "prop_dynamic"
+;   "origin" "854 671 -128"
+;   "angles" "0 291 0"
+;   "solid" "6"
+;   "rendercolor" "255 255 255"
+;   "model" "models/props/cs_militia/boxes_garage_lower.mdl"
+;}
+;{
+;   "classname" "prop_dynamic"
+;   "origin" "819 875 -128"
+;   "angles" "0 272 0"
+;   "solid" "6"
+;   "rendercolor" "255 255 255"
+;   "model" "models/props/cs_office/shelves_metal.mdl"
+;}
 
 ; Remove script call that could muck with tank spawns
 modify:
