--- a/cfg/stripper/zonemod/maps/c2m4_barns.cfg
+++ b/cfg/stripper/zonemod/maps/c2m4_barns.cfg
@@ -1,4 +1,18 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- infected ladder to climb above the saferoom without going all the way around
+add:
+{
+	"model" "*90" ;--- 2005 2438 -189
+	"normal.z" "0.000000"
+	"normal.y" "0.000000"
+	"normal.x" "1.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "1458 1040 -30"
+}
+; =====================================================
 ; ===============  MOUSTACHIO REMOVAL  ================
 ; =====================================================
 filter:
