add saferoom infected ladders, fix stuck spots, and fix weapon spawn inconsistency on c5m2_park

--- a/cfg/stripper/zonemod/maps/c5m2_park.cfg
+++ b/cfg/stripper/zonemod/maps/c5m2_park.cfg
@@ -1,4 +1,46 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+add:
+;--- ladder to get on top of saferoom marginally faster
+{
+	"model" "*45"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-12326.00 -6358.00 -121.00"
+	"angles" "0.00 180.00 0.00"
+}
+;--- ladder to get out of stuck spot near opening saferoom
+{
+	"model" "*77"
+	"normal.z" "0.00"
+	"normal.y" "1.00"
+	"normal.x" "0.00"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-1016.81 -286.96 151.99"
+	"angles" "0.00 0.00 0.00"
+}
+;--- Invisible block to prevent stuck spot under roof as well as extend the roof a bit so
+;--- that the jump to the overpass before the event truck is easier
+{
+	"origin" "-9070 -4752 176.57"
+	"mins" "-146 -10 -40"
+	"maxs" "1 .1 10"
+	"initialstate" "1"
+	"BlockType" "2"
+	"classname" "env_physics_blocker"
+}
+; -- Prevent a random weapon spawn removal that only affects the first round
+filter:
+{
+	"targetname" "case_weapon_spawn"
+}
+
+; =====================================================
 ; Acemod: unlock the ceda trailer back door once the event is started
 ; Credits to JaneDoe and NF for the trigger shit
 ; =====================================================
