add infected ladder to climb above the saferoom without going on the invisible side on c5m5_bridge

--- a/cfg/stripper/zonemod/maps/c5m5_bridge.cfg
+++ b/cfg/stripper/zonemod/maps/c5m5_bridge.cfg
@@ -1,4 +1,19 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- infected ladder to climb above the saferoom without going on the invisible side
+add:
+{
+	"model" "*28"
+	"normal.z" "0.000000"
+	"normal.y" "-0.093341"
+	"normal.x" "0.995634"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-3529.04 75.58 378.01"
+	"angles" "0.00 0.00 0.00"
+}
+; =====================================================
 ; =========  PROMOD GRENADE LAUNCHER REMOVAL  =========
 ; =====================================================
 filter:
