--- a/cfg/stripper/zonemod/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/zonemod/maps/c2m2_fairgrounds.cfg
@@ -1,4 +1,48 @@
 ; =====================================================
+; ================  RL4D2L ADDITIONS  =================
+; =====================================================
+; --- infected ladder to climb above the saferoom without going all the way around
+add:
+{
+	"model" "*114" ;---1711.5 974 10
+	"normal.z" "0.000000"
+	"normal.y" "-1.000000"
+	"normal.x" "0.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-149 1038 -10"
+}
+; --- eliminates the pseudo-ladder
+{
+	"model" "*114"
+	"normal.z" "0.000000"
+	"normal.y" "-1.000000"
+	"normal.x" "0.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "-159.5 1372 -20"
+}
+;--- pseudo ladder 2 eliminated in corner near warehouse, also add a pipe for visual clarity
+{
+	"model" "*193" ;---3854 784 12
+	"normal.z" "0.000000"
+	"normal.y" "0.000000"
+	"normal.x" "-1.000000"
+	"team" "2"
+	"classname" "func_simpleladder"
+	"origin" "233 -2922 -32"
+}
+{
+	"classname" "prop_dynamic"
+	"angles" "0 -90 0"
+	"disableshadows" "1"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
+	"rendercolor" "255 255 255"
+	"solid" "0"
+	"origin" "4096 -2138 161"
+}
+
+; =====================================================
 ; ==================  SAFEROOM PROPS  =================
 ; =====================================================
 
@@ -1352,147 +1396,147 @@ add:
 }
 
 ; --- SI ladder at the start to get out of stuck spot
-{
-	"classname" "prop_dynamic"
-	"angles" "0 270 0"
-	"disableshadows" "1"
-	"model" "models/props_urban/fence_post001.mdl"
-	"rendercolor" "255 255 0"
-	"solid" "0"
-	"origin" "1787.35 2141.95 1"
-}
-{
-	"origin" "1784 2142 52"
-	"mins" "-.5 -6 -58"
-	"maxs" ".5 6 58"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "1783 2142 43"
-	"mins" "-.5 -6 -49"
-	"maxs" ".5 6 49"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "1782 2142 34"
-	"mins" "-.5 -6 -40"
-	"maxs" ".5 6 40"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "1781 2142 25"
-	"mins" "-.5 -6 -31"
-	"maxs" ".5 6 31"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "1780 2142 16"
-	"mins" "-.5 -6 -22"
-	"maxs" ".5 6 22"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "1779 2142 7"
-	"mins" "-.5 -6 -13"
-	"maxs" ".5 6 13"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-
+;{
+;   "classname" "prop_dynamic"
+;   "angles" "0 270 0"
+;   "disableshadows" "1"
+;   "model" "models/props_urban/fence_post001.mdl"
+;   "rendercolor" "255 255 0"
+;   "solid" "0"
+;   "origin" "1787.35 2141.95 1"
+;}
+;{
+;   "origin" "1784 2142 52"
+;   "mins" "-.5 -6 -58"
+;   "maxs" ".5 6 58"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "1783 2142 43"
+;   "mins" "-.5 -6 -49"
+;   "maxs" ".5 6 49"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "1782 2142 34"
+;   "mins" "-.5 -6 -40"
+;   "maxs" ".5 6 40"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "1781 2142 25"
+;   "mins" "-.5 -6 -31"
+;   "maxs" ".5 6 31"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "1780 2142 16"
+;   "mins" "-.5 -6 -22"
+;   "maxs" ".5 6 22"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "1779 2142 7"
+;   "mins" "-.5 -6 -13"
+;   "maxs" ".5 6 13"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;
 ; --- Add a "climbable" ladder + vent prop so SI can access corner rooftops
-{
-	"classname" "prop_dynamic"
-	"angles" "-3.5 180 0"
-	"disableshadows" "1"
-	"model" "models/props/de_train/ladderaluminium.mdl"
-	"solid" "0"
-	"origin" "4084.55 -2129 87.653"
-}
+;{
+;   "classname" "prop_dynamic"
+;   "angles" "-3.5 180 0"
+;   "disableshadows" "1"
+;   "model" "models/props/de_train/ladderaluminium.mdl"
+;   "solid" "0"
+;   "origin" "4084.55 -2129 87.653"
+;}
 ; --- Add clips for the ladder so it's climbable
-
-{
-	"origin" "4080 -2129 12"
-	"mins" "-.5 -6 -9"
-	"maxs" ".5 6 9"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4081 -2129 21"
-	"mins" "-.5 -6 -18"
-	"maxs" ".5 6 18"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4082 -2129 30"
-	"mins" "-.5 -6 -27"
-	"maxs" ".5 6 27"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4083 -2129 39"
-	"mins" "-.5 -6 -36"
-	"maxs" ".5 6 36"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4084 -2129 48"
-	"mins" "-.5 -6 -45"
-	"maxs" ".5 6 45"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4085 -2129 57"
-	"mins" "-.5 -6 -54"
-	"maxs" ".5 6 54"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4086 -2129 66"
-	"mins" "-.5 -6 -63"
-	"maxs" ".5 6 63"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "4087 -2129 74"
-	"mins" "-.5 -6 -71"
-	"maxs" ".5 6 71"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
-{
-	"origin" "-4088 -2129 83"
-	"mins" "-.5 -6 -80"
-	"maxs" ".5 6 80"
-	"initialstate" "1"
-	"BlockType" "2"
-	"classname" "env_physics_blocker"
-}
+;
+;{
+;   "origin" "4080 -2129 12"
+;   "mins" "-.5 -6 -9"
+;   "maxs" ".5 6 9"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4081 -2129 21"
+;   "mins" "-.5 -6 -18"
+;   "maxs" ".5 6 18"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4082 -2129 30"
+;   "mins" "-.5 -6 -27"
+;   "maxs" ".5 6 27"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4083 -2129 39"
+;   "mins" "-.5 -6 -36"
+;   "maxs" ".5 6 36"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4084 -2129 48"
+;   "mins" "-.5 -6 -45"
+;   "maxs" ".5 6 45"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4085 -2129 57"
+;   "mins" "-.5 -6 -54"
+;   "maxs" ".5 6 54"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4086 -2129 66"
+;   "mins" "-.5 -6 -63"
+;   "maxs" ".5 6 63"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "4087 -2129 74"
+;   "mins" "-.5 -6 -71"
+;   "maxs" ".5 6 71"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
+;{
+;   "origin" "-4088 -2129 83"
+;   "mins" "-.5 -6 -80"
+;   "maxs" ".5 6 80"
+;   "initialstate" "1"
+;   "BlockType" "2"
+;   "classname" "env_physics_blocker"
+;}
 
 {
 	"classname" "prop_dynamic"
