--- a/cfg/cfgogl/zonemod/server_preference.cfg
+++ b/cfg/cfgogl/zonemod/server_preference.cfg
@@ -59,7 +59,7 @@ confogl_addcvar slots_max_slots "30" // Maximum amount of slots players can vote
 // -------------------------
 // This plugin stops distance points accumulating whilst the tank is alive.
 
-//confogl_addcvar l4d_no_tank_rush "1"
+confogl_addcvar l4d_no_tank_rush "1"
 
 // [l4d2_playstats.smx]
 // -------------------------
