--- a/cfg/cfgogl/zonemod/shared_plugins.cfg
+++ b/cfg/cfgogl/zonemod/shared_plugins.cfg
@@ -24,8 +24,8 @@ sm plugins load playercommands.smx
 //-----------------
 sm plugins load optional/zonemod/l4d2lib.smx
 sm plugins load optional/zonemod/l4d2util.smx
-sm plugins load optional/zonemod/l4d2_changelevel.smx
-sm plugins load optional/zonemod/l4d2_event_logger.smx
+//sm plugins load optional/zonemod/l4d2_changelevel.smx
+//sm plugins load optional/zonemod/l4d2_event_logger.smx
 
 //----------------------------------
 // General Competitive Plugins
@@ -200,6 +200,8 @@ sm plugins load optional/zonemod/l4d_votepoll_fix.smx
 sm plugins load optional/zonemod/l4d2_script_cmd_swap.smx
 sm plugins load optional/zonemod/chat_spam_throttle.smx
 sm plugins load optional/zonemod/parish_finale_ladder_fix.smx
+sm plugins load optional/zonemod/l4d2_tank_spawn_fix.smx
+sm plugins load optional/zonemod/l4d2_penalty_bonus.smx
 
 // Letzzzz go.
 sm plugins load confoglcompmod.smx
