--- a/cfg/cfgogl/zonemod/shared_settings.cfg
+++ b/cfg/cfgogl/zonemod/shared_settings.cfg
@@ -278,6 +278,9 @@ confogl_addcvar l4d2_MITSR_Machete 0
 confogl_addcvar l4d2_MITSR_RiotShield 0
 confogl_addcvar l4d2_MITSR_Tonfa 0
 
+// [l4d2_penalty_bonus.smx]
+confogl_addcvar sm_pbonus_tank 50
+
 /////////////////////////////
 // [Static shotgun spread] //
 /////////////////////////////
@@ -353,6 +356,7 @@ tank_map_only_second_event c8m5_rooftop
 tank_map_only_second_event c10m5_houseboat
 tank_map_only_second_event c11m5_runway
 tank_map_only_second_event c12m5_cornfield
+tank_map_only_second_event uz_escape
 
 // Finales with a single first event Tank
 tank_map_only_first_event c1m4_atrium
