--- a/cfg/cfgogl/rl4d2l/zonemod.cfg
+++ b/cfg/cfgogl/rl4d2l/zonemod.cfg
@@ -30,6 +30,7 @@ confogl_addcvar autopause_apdebug 0
 
 // [l4d_weapon_limits.smx]
 l4d_wlimits_add 2 0 weapon_pistol_magnum
+l4d_wlimits_add 3 0 weapon_melee
 l4d_wlimits_add 0 1 weapon_hunting_rifle weapon_sniper_scout weapon_sniper_awp
 l4d_wlimits_lock
 
@@ -46,8 +47,8 @@ confogl_addcvar l4d2_playstats_customcfg rl4d2l
 confogl_addcvar sm_skill_report_enable 1
 
 // [MeleeInTheSaferoom]
-confogl_addcvar l4d2_MITSR_Amount 2
-confogl_addcvar l4d2_MITSR_FireAxe 2
+confogl_addcvar l4d2_MITSR_Amount 1
+confogl_addcvar l4d2_MITSR_FireAxe 1
 
 confogl_addcvar sm_stats_writestats 1
 
